--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -6,7 +6,7 @@
    {% if not session.logged_in %}
     <a href="{{ url_for('login') }}">log in</a>
   {% else %}
-    <a href="{{ url_for('logout') }}">log out</a>
+  <a href="">log out</a>
   {% endif %}
   </div>
   {% for message in get_flashed_messages() %}
