--- a/app/templates/Post.html
+++ b/app/templates/Post.html
@@ -1,6 +1,6 @@
 {% extends "main.html" %}
 {% block body %}
-  {% for post in entries %}
+  {% for entry in entries %}
   {% if session.logged_in %}
         <form action= "{{ url_for('Post') }}" method="get" class="add-entry">
             <b>{{ Post.title }} </b>
