--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <title>App</title>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='main.css') }}">
 <div class=page>
-  <h1>App</h1>
-   {% if not session.logged_in %}
-    <a href="{{ url_for('login') }}">log in</a>
-  {% else %}
-    <a href="{{ url_for('logout') }}">log out</a>
-  {% endif %}
-  </div>
+	{% if not session.logged_in %}
+		<div class=navbar>
+		
+			<button class=navlink id=home href="">Home</button>
+			<button class=navlink id=profile href="">Profile</button>
+			<button class=navlink id=newpost href="">+New Post</button>
+			<button class=navlink id=logout href="">logout</button>
+		
+		</div>
+	{% endif %}
+   	<div hidden=true>{% if not session.logged_in %}
+  		 this is hidden so it isn't displayed, but used for reference.
+   		 <a href="{{ url_for('login') }}">log in</a>
+ 		 {% else %}
+   		 <a href="{{ url_for('logout') }}">log out</a>
+  		 {% endif %}</div>
+ 	</div>
   {% for message in get_flashed_messages() %}
     <div class=flash>{{ message }}</div>
   {% endfor %}
