--- a/app/templates/post_Edit.html
+++ b/app/templates/post_Edit.html
@@ -1,16 +1,21 @@
 {% extends "main.html" %}
 {% block body %}
-  {% if session.logged_in %}
+{% if session.logged_in %}
 <form action="/postEdit{{postUrlParam}}"
       method="post" class="add-entry">
-      <dl>
+    <dl>
         <dt>Add a Title!:
-        </dt><dd><input type="text" size="30" name="title">
-        </dd><dt>Give some text!:
-        </dt><dd><textarea name="text" rows="5" cols="40"></textarea>
-        </dd><dd><input type="submit" value="Share">
-      </dd></dl>
-    </form>
+        </dt>
+        <dd><input type="text" size="30" name="title">
+        </dd>
+        <dt>Give some text!:
+        </dt>
+        <dd><textarea name="body" rows="5" cols="40"></textarea>
+        </dd>
+        <dd><input type="submit" value="Share">
+        </dd>
+    </dl>
+</form>
 {% endif %}
 {% endblock %}
 
