--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -13,7 +13,7 @@
 		
 		</div>
 	{% endif %}
-   	<div hidden=true>{% if not session.logged_in %}
+   	<div hidden=true>{% if session.logged_in %}
   		 this is hidden so it isn't displayed, but used for reference.
    		 <a href="{{ url_for('login') }}">log in</a>
  		 {% else %}
