--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -3,7 +3,7 @@
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='main.css') }}">
 <div class=page>
-	{% if not session.logged_in %}
+	{% if session.logged_in %}
 		<div class=navbar>
 		
 			<button class=navlink id=home href="">Home</button>
@@ -13,7 +13,7 @@
 		
 		</div>
 	{% endif %}
-   	<div hidden=true>{% if session.logged_in %}
+   	<div hidden=true>{% if not session.logged_in %}
   		 this is hidden so it isn't displayed, but used for reference.
    		 <a href="{{ url_for('login') }}">log in</a>
  		 {% else %}
