--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<title>App</title>
-<link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
-<link rel=stylesheet type=text/css href="{{ url_for('static', filename='main.css') }}">
+<head>
+	<title>App</title>
+	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='main.css') }}">
+</head>
 <div class=page>
 	{% if session.logged_in %}
 		<div class=navbar>
@@ -25,3 +27,12 @@
   {% endfor %}
   {% block body %}{% endblock %}
 </div>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+<script type="text/javascript">
+	var socket = io.connect('http://localhost:5000');
+	socket.on('connect', function() {
+		console.log("Socket connected successfully")
+		socket.emit('my event', {data: "I'm connected!"});
+	});
+
+</script>
