--- a/app/static/main.css
+++ b/app/static/main.css
@@ -1,8 +1,16 @@
+body{
+    font-family: "Open Sans", sans-serif;
+    margin: 0;
+    margin-left: 16px;
+}
 .navbar {
-	block:inline;
-	width:100%;
-	height:30px;
-	border: solid gray;
+	border: 0;
+    padding: 20px 5%;
+    background-color: #fdbf09;
+    box-shadow: 1px 1px 10px 2px #d2b30a;
+    width: 100%;
+    margin-bottom: 20px;
+    margin-left: -16px;
 }
 
 #logout, #newpost {
@@ -10,5 +18,15 @@
 }
 
 .navlink {
-	color:rgb(150,0,0);
+	background: rgba(255,255,255,0.3);
+    border: 1px solid #fff;
+    color: #fff;
+    font-size: 24px;
+    border-radius: 3px;
+    cursor: pointer;
+    margin-right: 8px;
+}
+
+.navlink:hover{
+    background: rgba(255,255,255,0.5);
 }
