--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -3,6 +3,7 @@
 	<title>App</title>
 	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='main.css') }}">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 </head>
 <div class=page>
 	{% if session.logged_in %}
