--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <head>
 	<title>App</title>
+	<script
+			src="https://code.jquery.com/jquery-3.3.1.min.js"
+			integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+			crossorigin="anonymous"></script>
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+		  integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='main.css') }}">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
@@ -12,7 +18,12 @@
 			<button class=navlink id=home href="">Home</button>
 			<button class=navlink id=profile href="">Profile</button>
 			<button class=navlink id=newpost href="">+New Post</button>
-			<button class=navlink id=logout href="">logout</button>
+			<button class=navlink id=logout href="">Logout</button>
+			<div id="notification-area">
+				<button class="navlink fa fa-bell"></button>
+				<span id="notification-count"></span>
+				<div id="notifications">
+				</div>
 		
 		</div>
 	{% endif %}
@@ -30,10 +41,12 @@
 </div>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
 <script type="text/javascript">
+	var userId = {{ session.get("logged_in") or "" }}
+	var notifications = []
 	var socket = io.connect('http://localhost:5000');
 	socket.on('connect', function() {
 		console.log("Socket connected successfully")
-		socket.emit('my event', {data: "I'm connected!"});
 	});
 
 </script>
+<script type="text/javascript" src="/static/js/notificationHandler.js"></script>
