Applied some minor fixes to registration feature

--- a/app/templates/registration.html
+++ b/app/templates/registration.html
@@ -12,7 +12,7 @@
     <dd><input type=password name=password1>
     <dt>Re-Enter Password:
     <dd><input type=password name=password2>
-    <dd><input type=submit value=Login></dd>
+    <dd><input type=submit value=Register></dd>
         </dl>
 </form>
 {% endblock %}
