--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -15,9 +15,9 @@
 	{% if session.logged_in %}
 		<div class=navbar>
 		
-			<button class=navlink id=home href="">Home</button>
+			<button class=navlink id=home href="/listview">Home</button>
 			<button class=navlink id=profile href="">Profile</button>
-			<button class=navlink id=newpost href="">+New Post</button>
+			<button class=navlink id=newpost href="/postEdit">+New Post</button>
 			<button class=navlink id=logout href="">Logout</button>
 			<div id="notification-area">
 				<button class="navlink fa fa-bell"></button>
