--- a/app/templates/post_view.html
+++ b/app/templates/post_view.html
@@ -9,7 +9,17 @@
     padding: 10px;
     border-radius: 3px;
 ">
-    <h1>{{title}}</h1>
+    <div>
+        <h1 style="display: inline-block;">{{title}}</h1>
+        <form action="/{{'subscriptions/{}/{}'.format('remove' if isSubscribed else 'add', postId)}}"
+              method="POST"
+              style="
+            display: inline-block;
+            float: right;
+        ">
+            <input type="submit" value="{{'Unsubscribe' if isSubscribed else 'Subscribe'}}">
+        </form>
+    </div>
     <p>Posted by: {{postedby.username}}</p>
     <p>{{body}}</p>
 </div>
