Changing main.html

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -18,6 +18,7 @@
 			<button class=navlink id=home><a href="/listview">Home</a></button>
 			<button class=navlink id=profile><a href="">Profile</a></button>
 			<button class=navlink id=newpost><a href="/postEdit">+New Post</a></button>
+			<button class=navlink id=newgroup><a href="/groups/create">+New Group</a></button>
 			<button class=navlink id=logout><a href="/logout">Logout</a></button>
 			<div id="notification-area">
 				<button class="navlink fa fa-bell"></button>
