--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -11,4 +11,5 @@
         <dd><input type=submit value=Login>
     </dl>
 </form>
+<a href="/register">Click here to register!</a></button>
 {% endblock %}
