--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -15,11 +15,11 @@
 	{% if session.logged_in %}
 		<div class=navbar>
 		
-			<button class=navlink id=home><a href="/listview">Home</a></button>
-			<button class=navlink id=profile><a href="">Profile</a></button>
-			<button class=navlink id=newpost><a href="/postEdit">+New Post</a></button>
-			<button class=navlink id=newgroup><a href="/groups/create">+New Group</a></button>
-			<button class=navlink id=logout><a href="/logout">Logout</a></button>
+			<a class=navlink id=home href="/listview">Home</a></button>
+			<a class=navlink id=profile href="/user">Profile</a></button>
+			<a class=navlink id=newpost href="/postEdit">+New Post</a></button>
+			<a class=navlink id=newgroup href="/groups/create">+New Group</a></button>
+			<a class=navlink id=logout href="/logout">Logout</a></button>
 			<div id="notification-area">
 				<button class="navlink fa fa-bell"></button>
 				<span id="notification-count"></span>
