--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -21,7 +21,7 @@
 			<a class=navlink id=newgroup href="/groups/create">+New Group</a></button>
 			<a class=navlink id=logout href="/logout">Logout</a></button>
 			<button class=navlink id=home><a href="/listview">Home</a></button>
-			<button class=navlink id=profile><a href="">Profile</a></button>
+			<button class=navlink id=profile><a href="/user">Profile</a></button>
 			<button class=navlink id=newpost><a href="/postEdit">+New Post</a></button>
 			<button class=navlink id=newgroup><a href="/groups/create">+New Group</a></button>
 			<button class=navlink id=logout><a href="/logout">Logout</a></button>
