--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -16,7 +16,7 @@
 		<div class=navbar>
 		
 			<a class=navlink id=home href="/listview">Home</a></button>
-			<a class=navlink id=profile href="/user">Profile</a></button>
+			<a class=navlink id=profile href="/userProfile">Profile</a></button>
 			<a class=navlink id=newpost href="/postEdit">+New Post</a></button>
 			<a class=navlink id=newgroup href="/groups/create">+New Group</a></button>
 			<a class=navlink id=logout href="/logout">Logout</a></button>
