Doing some polishing up of the prototype. Removing profile.py and adding it into userprofile.py. The direct messaging wasn't displaying so i changed the user_Profile.html to display it. Updated routes.py

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -16,12 +16,12 @@
 		<div class=navbar>
 		
 			<a class=navlink id=home href="/listview">Home</a></button>
-			<a class=navlink id=profile href="/user">Profile</a></button>
+			<a class=navlink id=profile href="/userProfile">Profile</a></button>
 			<a class=navlink id=newpost href="/postEdit">+New Post</a></button>
 			<a class=navlink id=newgroup href="/groups/create">+New Group</a></button>
 			<a class=navlink id=logout href="/logout">Logout</a></button>
 			<button class=navlink id=home><a href="/listview">Home</a></button>
-			<button class=navlink id=profile><a href="/user">Profile</a></button>
+			<button class=navlink id=profile><a href="/userProfile">Profile</a></button>
 			<button class=navlink id=newpost><a href="/postEdit">+New Post</a></button>
 			<button class=navlink id=newgroup><a href="/groups/create">+New Group</a></button>
 			<button class=navlink id=logout><a href="/logout">Logout</a></button>
