Polishing up listview

--- a/app/templates/ListView.html
+++ b/app/templates/ListView.html
@@ -1,6 +1,7 @@
 {% extends "main.html" %}
 {% block body %}
 {% if session.logged_in %}
+<em>You have Posts!!!!!!</em>
 {% for post in posts %}
 <a href="/post/{{post.id}}" style="
             width: 70%;
