--- a/app/templates/user_Profile.html
+++ b/app/templates/user_Profile.html
@@ -9,7 +9,7 @@
           <td><h1>User: {{ user.username }}</h1></td>
       </tr>
       <tr>
-          <td><h4>{{user.email}}</h4></td>
+          <td><h4>Email: {{user.email}}</h4></td>
       </tr>
       <tr>
           <td><h4>Registered on: {{user.createdAt}}</h4></td>
