--- a/app/templates/post_view.html
+++ b/app/templates/post_view.html
@@ -5,7 +5,7 @@
     width: 80%;
     margin: 0 auto;
     margin-top: 10vh;
-    border: 1px solid #ccc;
+    border: 1px solid #737373;
     padding: 10px;
     border-radius: 3px;
 ">
@@ -27,7 +27,7 @@
 <div style="margin: 0 auto; width: 80%; margin-top: 10px;">
     {% for comment in comments %}
     <div style="
-        border: 1px solid #ccc;
+        border: 1px solid #737373;
         border-radius: 3px;
         padding: 0px 2%;
         width: 30%;
